# pyCellModeller

./: ADR-001.md  AGENT.md  ARCHITECTURE.md  CODEX_PROMPT.md  DEVELOPMENT_PLAN.md  PRODUCT.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/notebooks/: simulation_api_flow.ipynb
examples/scripts/: deterministic_cpu_summary.py
examples/tutorials/: tutorial_1_native.py
src/pycellmodeller/: __init__.py
src/pycellmodeller/api/: __init__.py  simulation.py
src/pycellmodeller/biology/: __init__.py
src/pycellmodeller/biophysics/: __init__.py  torch_bacterium.py
src/pycellmodeller/cli/: __init__.py
src/pycellmodeller/core/: __init__.py  cells.py  config.py  events.py  state.py
src/pycellmodeller/engine/: __init__.py  torch_engine.py
src/pycellmodeller/fields/: __init__.py
src/pycellmodeller/io/: __init__.py
src/pycellmodeller/mechanics/: __init__.py
src/pycellmodeller/programs/: __init__.py  base.py
tests/integration/: test_simulation_initialization.py  test_torch_bacterium_end_to_end.py
tests/regression/: test_deterministic_cpu_stepping.py  test_tutorial_1_native_short_run.py
tests/unit/: test_config.py  test_package_imports.py  test_simulation_behaviors.py  test_state_cells.py  test_torch_bacterium.py
